--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^1.1.2"
   },
+  "homepage": "https://agcakza.github.io/yourdevteam-test/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
